syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/source.proto";
import "common/billing_type.proto";
import "common/billing_cycle.proto";

option go_package = "api/grpc/v1/invoice;invoice_grpc_service";

message NewInvoiceForContractRequest {
  string tenant = 1; // mandatory
  string loggedInUserId = 2;
  string contractId = 3; // mandatory
  bool dryRun = 5;
  google.protobuf.Timestamp createdAt = 7;
  SourceFields sourceFields = 8;
  google.protobuf.Timestamp invoicePeriodStart = 9; // mandatory
  google.protobuf.Timestamp invoicePeriodEnd = 10; // mandatory
  string currency = 11; // mandatory
  BillingCycle billingCycle = 12;
}

message FillInvoiceRequest {
  string tenant = 1;
  string loggedInUserId = 2;
  string invoiceId = 3;
  double amount = 4;
  double vat = 5;
  double total = 6;
  repeated InvoiceLine invoiceLines = 7;
  google.protobuf.Timestamp updatedAt = 8;
  string appSource = 9;
}

message InvoiceLine {
  string serviceLineItemId = 1;
  string name = 2;
  double price = 3;
  int64 quantity = 4;
  double amount = 5;
  double vat = 6;
  double total = 7;
  BilledType billedType = 8;
  string serviceLineItemParentId = 9;
}

message PayInvoiceRequest {
  string tenant = 1;
  string loggedInUserId = 2;
  string invoiceId = 3;
  google.protobuf.Timestamp updatedAt = 4;
  SourceFields sourceFields = 5;
}

message PdfGeneratedInvoiceRequest {
  string tenant = 1;
  string loggedInUserId = 2;
  string invoiceId = 3;
  string repositoryFileId = 4;
  google.protobuf.Timestamp updatedAt = 5;
  string appSource = 6;
}

message SimulateInvoiceRequest {
  string tenant = 1;
  string loggedInUserId = 2;
  string contractId = 3;
  google.protobuf.Timestamp date = 4;
  repeated DryRunServiceLineItem dryRunServiceLineItems = 6;
  google.protobuf.Timestamp createdAt = 7;
  SourceFields sourceFields = 8;
}

message DryRunServiceLineItem {
  string serviceLineItemId = 1;
  string name = 3;
  BilledType billed = 4;
  double price = 5;
  int64 quantity = 6;
}

message InvoiceIdResponse {
  string id = 1;
}

service InvoiceGrpcService {
  rpc NewInvoiceForContract(NewInvoiceForContractRequest) returns (InvoiceIdResponse);
  rpc FillInvoice(FillInvoiceRequest) returns (InvoiceIdResponse);
  rpc PdfGeneratedInvoice(PdfGeneratedInvoiceRequest) returns (InvoiceIdResponse);
  rpc PayInvoice(PayInvoiceRequest) returns (InvoiceIdResponse);
  rpc SimulateInvoice(SimulateInvoiceRequest) returns (InvoiceIdResponse);
}